--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,22 @@
 events {}  # event context needs to be defined to consider config valid
 
 http {
+  include mime.types;
+  default_type application/octet-stream;
   server {
     listen 80 default_server;
-  
+    root /usr/share/nginx/html; 
+    
     location / {
-      root /usr/share/nginx/html; 
-    }
-
-    location /api/ {
-      proxy_pass         http://backend/api/;
-      proxy_redirect     off;
-
+      proxy_pass         http://flask-app:5000/;
       proxy_set_header   Host             $host;
       proxy_set_header   X-Real-IP        $remote_addr;
       proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+    }
+
+    location /static/ {
+      root /usr/share/nginx/html;
+      try_files $uri $uri/ =404
     }
   }
 }
